@@ -1,6 +1,7 @@
 Revision history for File-Slurper
 
 {{$NEXT}}
+          Correctly set value of $PerlIO::encoding::fallback
 
 0.010     2017-09-17 22:09:05+02:00 Europe/Amsterdam
           Recognize "latin-1" as iso-8859-1
